# nn-concepts

./: .gitignore  README.md
Lab1/: lab1_2.ipynb
Lab2/: Lab4_Regularyzacje_i_reprezentacje_tested.ipynb
Lab3/: Lab6 - obrazki.ipynb
Lab5/: Lab9_modele_generatywne_25L.ipynb
Mini_projekt1/: RMSLE Calculation.ipynb  model.ipynb  muchomorki.csv  results.csv
Mini_projekt2/: model.ipynb  pred.csv  tresc.txt
Mini_projekt3/: Evaluation.ipynb  model.ipynb  pred.csv
Mini_projekt3/model_predictions/: first_big_training result_acc_61_cacc_60_pred.csv  first_bigger_model_acc_51_cacc_50_pred.csv  second_model_acc_54_cacc_54_pred.csv
Mini_projekt4/: .gitignore  cond_conv_gan.ipynb  cond_gan.ipynb  diffusion.ipynb  fid.py  gan.pth  pyproject.toml
Mini_projekt5/: model.ipynb  pred.csv  pyproject.toml
Mini_projekt5/results/: 77_alpha_05  metrics
Mini_projekt6/: model.ipynb  model_old.ipynb  pred.csv  predictions.csv  pyproject.toml
autoenkodery/: autoenkodery.ipynb
gan/: evaluator.py  gan.ipynb  train_evaluator.py
klasyfikacja/: model.ipynb  pred.csv
regularyzacja_i_repreprezentacje/: params_search.csv
rnn/: model.ipynb  pyproject.toml  sieci_rekurencyjne.ipynb
rnn/results/: 77_alpha_10  metrics_optuna
sieci_wizyjne/: model.ipynb  pyproject.toml
sieci_wizyjne/model_predictions/: best_architecture2_epoch_100_acc_70_cacc_70_pred.csv  third_model_acc_52_cacc_52.csv
transformer/: CV_transformers.ipynb  transformer.ipynb
