[tool.poetry]
name = "mini-projekt5"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[[tool.poetry.source]]
name = "pytorch_cuda"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

torch = { version = "^2.7.0", source = "pytorch_cuda" }
torchvision = { version = "^0.22.0", source = "pytorch_cuda" }
torchaudio = { version = "^2.7.0", source = "pytorch_cuda" }
matplotlib = "^3.10.3"
scikit-learn = "^1.6.1"
numpy = "^2.2.6"
seaborn = "^0.13.2"
pandas = "^2.2.3"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
